--- a/Views/Especialidad/Index.cshtml
+++ b/Views/Especialidad/Index.cshtml
@@ -1,32 +1,46 @@
 @model IEnumerable<Turnos.Models.Especialidad>
 
-   <p>
-       <a asp-action="Create">Nuevo</a>
-   </p>
-    <table>
-        <thead>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+</head>
+
+<body>
+    <p>
+        <a asp-action="Create" class="btn-floating btn-large green darken-1"><i
+                class="material-icons">person_add</i></a>
+    </p>
+    <table class="responsive-table highlight z-depth-3 blue lighten-5">
+        <thead class="blue darken-1 white-text">
             <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Descripcion)
                 </th>
+                <th>
+
+                </th>
             </tr>
         </thead>
         <tbody>
-            @*Aqui colocaremos, mas adelante, el codigo para mostrar los registros de la base de datos*@
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Descripcion)
-                </td>
-                 <td>
-                   <a asp-action="Edit" asp-route-id="@item.IdEspecialidad">Editar</a>
-                </td>
-                <td>
-                   <a asp-action="Delete" asp-route-id="@item.IdEspecialidad">Eliminar</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Descripcion)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.IdEspecialidad"><i class="material-icons">edit</i></a>
+                        <a asp-action="Delete" asp-route-id="@item.IdEspecialidad"><i
+                            class="material-icons red-text">delete</i></a>
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
+</body>
+
 </html>
