--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,65 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+  ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<br>
+<br>
+<br>
+<div class="row">
+  <div class="col s12 m4">
+    <div class="card">
+      <div class="card-image center orange">
+        <i class="material-icons large white-text">medical_services</i>
+        <a class="btn-floating halfway-fab waves-effect waves-light red" asp-controller="Especialidad"
+          asp-action="Create"><i class="material-icons">add</i></a>
+      </div>
+      <div class="card-content">
+        <span class="card-title">Especialidades</span>
+        <p>Aquí podrás dar de alta nuevas especialidades médicas, modificarlas o eliminarlas. Las mismas estarán
+          disponibles para ser asignadas a un médico.</p>
+          <br>
+      </div>
+      <div class="card-action blue-grey darken-3">
+        <a asp-controller="Especialidad" asp-action="Index">Ver más</a>
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m4">
+    <div class="card">
+      <div class="card-image center blue darken-1">
+        <i class="material-icons large white-text">assignment_ind</i>
+        <a class="btn-floating halfway-fab waves-effect waves-light red" asp-controller="Medico"
+          asp-action="Create"><i class="material-icons">add</i></a>
+      </div>
+      <div class="card-content">
+        <span class="card-title">Medicos</span>
+        <p>Aquí podrás dar de alta Médicos, asignarles una especialidad, modificarlos o eliminarlos.</p>
+        <br>
+        <br>
+        <br>
+      </div>
+      <div class="card-action blue-grey darken-3">
+        <a asp-controller="Medico" asp-action="Index">Ver más</a>
+      </div>
+    </div>
+  </div>
+  <div class="col s12 m4">
+    <div class="card">
+      <div class="card-image center green accent-4">
+        <i class="material-icons large white-text">person_add</i>
+        <a class="btn-floating halfway-fab waves-effect waves-light red" asp-controller="Paciente"
+          asp-action="Create"><i class="material-icons">add</i></a>
+      </div>
+      <div class="card-content">
+        <span class="card-title">Pacientes</span>
+        <p>Aquí podrás dar de alta Pacientes, modificarlos o eliminarlos.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
+      <div class="card-action blue-grey darken-3">
+        <a asp-controller="Paciente" asp-action="Index">Ver más</a>
+      </div>
+    </div>
+  </div>
 </div>
