--- a/Views/Medico/Details.cshtml
+++ b/Views/Medico/Details.cshtml
@@ -10,56 +10,45 @@
 <body>
 
 <div>
-    <h4>Medico</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nombre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Apellido)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Apellido)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Direccion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Direccion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HorarioAtencionDesde)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HorarioAtencionDesde)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HorarioAtencionHasta)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HorarioAtencionHasta)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MedicoEspecialidad[0].Especialidad.Descripcion)
-        </dt>
-         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MedicoEspecialidad[0].Especialidad.Descripcion)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.IdMedico">Editar</a> |
-    <a asp-action="Index">Volver</a>
-</div>
+<h5>Médico</h5>
+        <hr />
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card hoverable blue darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">
+                            <h5><b>@Html.DisplayFor(model => model.Apellido), @Html.DisplayFor(model =>
+                                    model.Nombre)</b></h5>
+                        </span>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Direccion): @Html.DisplayFor(model => model.Direccion)
+                        </dt>
+                        <hr />
+                        <dt>
+                            <h6> @Html.DisplayNameFor(model => model.Email): @Html.DisplayFor(model => model.Email)</h6>
+                        </dt>
+                        <hr />
+                        <dt>
+                            <h6> @Html.DisplayNameFor(model => model.HorarioAtencionDesde): @Html.DisplayFor(model =>
+                                model.HorarioAtencionDesde)</h6>
+                        </dt>
+                        <hr />
+                        <dt>
+                            <h6>@Html.DisplayNameFor(model => model.HorarioAtencionHasta): @Html.DisplayFor(model =>
+                                model.HorarioAtencionHasta)</h6>
+                        </dt>
+                        <hr />
+                    </div>
+                    <div class="card-action blue-grey darken-2">
+                        <form asp-action="Edit">
+                            <input type="hidden" asp-for="IdMedico" />
+                            <a asp-action="Edit" asp-route-id="@Model.IdMedico">Editar</a>
+                            <a asp-action="Index" class="right">Volver</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
