--- a/Views/Paciente/Delete.cshtml
+++ b/Views/Paciente/Delete.cshtml
@@ -1,46 +1,40 @@
 @model Turnos.Models.Paciente
 
-<h3>¿Esta usted seguro de eliminar el siguiente registro?</h3>
-<div>
-    <dl>
-        <dt>
-            @Html.DisplayNameFor(modelo => modelo.Nombre)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Nombre)
-        </dd>
-         <dt>
-            @Html.DisplayNameFor(modelo => modelo.Apellido)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Apellido)
-        </dd>
-         <dt>
-            @Html.DisplayNameFor(modelo => modelo.Direccion)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Direccion)
-        </dd>
-         <dt>
-            @Html.DisplayNameFor(modelo => modelo.Telefono)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Telefono)
-        </dd>
-         <dt>
-            @Html.DisplayNameFor(modelo => modelo.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Email)
-        </dd>
-    </dl>
-    <form asp-action = "Delete">
-        <input type="hidden" asp-form = "IdPaciente"/>
-        <input type="submit" value= "Eliminar"/>
-    </form>
+ <h4>¿Esta seguro de eliminar el siguiente registro?</h4>
     <div>
-        <a asp-action="Index">Volver
-            
-        </a>
+        <h5>Médico</h5>
+        <hr />
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card hoverable blue darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">
+                            <h5><b>@Html.DisplayFor(model => model.Apellido), @Html.DisplayFor(model =>
+                                    model.Nombre)</b></h5>
+                        </span>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Direccion): @Html.DisplayFor(model => model.Direccion)
+                        </dt>
+                        <hr />
+                        <dt>
+                            <h6> @Html.DisplayNameFor(model => model.Telefono): @Html.DisplayFor(model => model.Telefono)</h6>
+                        </dt>
+                        <hr />
+                        <dt>
+                            <h6> @Html.DisplayNameFor(model => model.Email): @Html.DisplayFor(model =>
+                                model.Email)</h6>
+                        </dt>
+                        <hr />
+                    </div>
+                    <div class="card-action blue-grey darken-2">
+                        <form asp-action="Delete">
+                            <input type="hidden" asp-for="IdPaciente" />
+                            <input type="Submit" value="Eliminar" class="waves-effect waves-light btn-small orange lighten-2"/>
+                            <a asp-action="Index" class="right">Volver</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+
