--- a/Views/Paciente/Details.cshtml
+++ b/Views/Paciente/Details.cshtml
@@ -1,43 +1,39 @@
 @model Turnos.Models.Paciente
 
 <h4>Paciente</h4>
-<div>
-    <dl>
-        <dt>
-            @Html.DisplayNameFor(modelo => modelo.Nombre)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Nombre)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(modelo => modelo.Apellido)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Apellido)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(modelo => modelo.Direccion)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Direccion)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(modelo => modelo.Telefono)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Telefono)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(modelo => modelo.Email)
-        </dt>
-        <dd>
-            @Html.DisplayFor(modelo => modelo.Email)
-        </dd>
-        <dt>
-        <dt>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.IdPaciente">Editar</a> |
-    <a asp-action="Index">Volver</a>
-</div>
+
+ <hr />
+        <div class="row">
+            <div class="col s12 m6">
+                <div class="card hoverable blue darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">
+                            <h5><b>@Html.DisplayFor(model => model.Apellido), @Html.DisplayFor(model =>
+                                    model.Nombre)</b></h5>
+                        </span>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Direccion): @Html.DisplayFor(model => model.Direccion)
+                        </dt>
+                        <hr />
+                        <dt>
+                            <h6> @Html.DisplayNameFor(model => model.Telefono): @Html.DisplayFor(model => model.Telefono)</h6>
+                        </dt>
+                        <hr />
+                        <dt>
+                            <h6> @Html.DisplayNameFor(model => model.Email): @Html.DisplayFor(model =>
+                                model.Email)</h6>
+                        </dt>
+                        <hr />
+                    </div>
+                    <div class="card-action blue-grey darken-2">
+                        <form asp-action="Edit">
+                            <input type="hidden" asp-for="IdPaciente" />
+                            <a asp-action="Edit" asp-route-id="@Model.IdPaciente">Editar</a>
+                            <a asp-action="Index" class="right">Volver</a>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
