--- a/Views/Paciente/Index.cshtml
+++ b/Views/Paciente/Index.cshtml
@@ -1,58 +1,59 @@
 @model IEnumerable<Turnos.Models.Paciente>
 
-   <p>
-       <a asp-action="Create">Nuevo</a>
-   </p>
-    <table>
-        <thead>
+<p>
+        <a asp-action="Create" class="btn-floating btn-large green darken-1"><i
+                class="material-icons">person_add</i></a>
+    </p>
+    <table class="responsive-table highlight z-depth-3 blue lighten-5">
+        <thead class="blue darken-1 white-text">
             <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Nombre)
                 </th>
-                 <th>
+                <th>
                     @Html.DisplayNameFor(model => model.Apellido)
                 </th>
-                 <th>
+                <th>
                     @Html.DisplayNameFor(model => model.Direccion)
                 </th>
-                 <th>
+                <th>
                     @Html.DisplayNameFor(model => model.Telefono)
                 </th>
-                 <th>
+                <th>
                     @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+
                 </th>
             </tr>
         </thead>
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nombre)
-                </td>
-                 <td>
-                    @Html.DisplayFor(modelItem => item.Apellido)
-                </td>
-                   <td>
-                    @Html.DisplayFor(modelItem => item.Direccion)
-                </td>
-                   <td>
-                    @Html.DisplayFor(modelItem => item.Telefono)
-                </td>
-                   <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                 <td>
-                   <a asp-action="Edit" asp-route-id="@item.IdPaciente">Editar</a>
-                </td>
-                 <td>
-                   <a asp-action="Details" asp-route-id="@item.IdPaciente">Detalle</a>
-                </td>
-                <td>
-                   <a asp-action="Delete" asp-route-id="@item.IdPaciente">Eliminar</a>
-                </td> 
-            </tr>
-            } 
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Apellido)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Direccion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Telefono)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.IdPaciente"><i class="material-icons">edit</i></a>
+                        <a asp-action="Details" asp-route-id="@item.IdPaciente"><i
+                            class="material-icons grey-text">more_vert</i></a>
+                        <a asp-action="Delete" asp-route-id="@item.IdPaciente"><i
+                            class="material-icons red-text">delete</i></a>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
-</html>
