--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,18 +16,20 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a asp-controller="Home" asp-action="Index">Inicio</a></li>
-        <li><a asp-controller="Especialidad" asp-action="Index">Especialidad</a></li>
-        <li><a asp-controller="Paciente" asp-action="Index">Paciente</a></li>
-        <li><a asp-controller="Medico" asp-action="Index">Medico</a></li>
+        <li><a asp-controller="Especialidad" asp-action="Index">Especialidades</a></li>
+        <li><a asp-controller="Paciente" asp-action="Index">Pacientes</a></li>
+        <li><a asp-controller="Medico" asp-action="Index">Medicos</a></li>
+        <li><a asp-controller="Turno" asp-action="Index">Turnos</a></li>
       </ul>
     </div>
   </nav>
 
   <ul class="sidenav" id="mobile-demo">
    <li><a asp-controller="Home" asp-action="Index">Inicio</a></li>
-        <li><a asp-controller="Especialidad" asp-action="Index">Especialidad</a></li>
-        <li><a asp-controller="Paciente" asp-action="Index">Paciente</a></li>
-        <li><a asp-controller="Medico" asp-action="Index">Medico</a></li>
+        <li><a asp-controller="Especialidad" asp-action="Index">Especialidades</a></li>
+        <li><a asp-controller="Paciente" asp-action="Index">Pacientes</a></li>
+        <li><a asp-controller="Medico" asp-action="Index">Medicos</a></li>
+        <li><a asp-controller="Turno" asp-action="Index">Turnos</a></li>
   </ul>
     </header>
     <div class="container">
