Agrega Login y propiedades Session

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,12 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+@{
+    if(Context.Session.GetString("usuario") == null)
+    {
+        Context.Response.Redirect("/Login");
+    }
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -20,6 +28,7 @@
         <li><a asp-controller="Paciente" asp-action="Index">Pacientes</a></li>
         <li><a asp-controller="Medico" asp-action="Index">Medicos</a></li>
         <li><a asp-controller="Turno" asp-action="Index">Turnos</a></li>
+        <li><a asp-controller="Login" asp-action="Logout">Logout</a></li>
       </ul>
     </div>
   </nav>
@@ -30,6 +39,7 @@
         <li><a asp-controller="Paciente" asp-action="Index">Pacientes</a></li>
         <li><a asp-controller="Medico" asp-action="Index">Medicos</a></li>
         <li><a asp-controller="Turno" asp-action="Index">Turnos</a></li>
+        <li><a asp-controller="Login" asp-action="Logout">Logout</a></li>
   </ul>
     </header>
     <div class="container">
