--- a/Views/Turno/Index.cshtml
+++ b/Views/Turno/Index.cshtml
@@ -1,4 +1,5 @@
 @model Turnos.Models.Turno
+@Html.AntiForgeryToken()
 
 @{
     ViewBag.Title = "Asignación de Turnos";
@@ -179,6 +180,7 @@
                 type: "POST",
                 url: 'Turno/GrabarTurno',
                 data: {'turno': data},
+                headers: {'RequestVerificationToken': $('input[name="__RequestVerificationToken"]').val()},
                 success: function(e){
                     if(e.ok){
                         ObtenerTurnosYActualizar($('#IdMedico').val());
@@ -196,6 +198,7 @@
                     type: "POST",
                     url: 'Turno/EliminarTurno',
                     data:{'IdTurno' : turnoSeleccionado.idTurno},
+                    headers: {'RequestVerificationToken': $('input[name="__RequestVerificationToken"]').val()},
                     success: function(e){
                         if(e.ok){
                             ObtenerTurnosYActualizar($('#IdMedico').val());
